Training/force-app/main/default/objects/Shop__c/fields/Corporation__c.field-meta.xml
<CustomField>
    <fullName>Corporation__c</fullName>
    <label>Corporation</label>
    <referenceTo>Corporation__c</referenceTo>
    <relationshipLabel>Shop</relationshipLabel>
    <relationshipName>Shop</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>