Training/force-app/main/default/objects/Shop__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shop</relationshipLabel>
    <relationshipName>Shop</relationshipName>
    <type>Lookup</type>
</CustomField>