Training/force-app/main/default/objects/Shop__c/fields/picture__c.field-meta.xml
<CustomField>
    <fullName>picture__c</fullName>
    <formula>IMAGE( Image_url__c , &apos;image&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>picture</label>
    <type>Text</type>
</CustomField>