Training/force-app/main/default/objects/Shop__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Products for Shop</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Shop&amp;Products</relationshipLabel>
    <relationshipName>Shop</relationshipName>
    <type>Lookup</type>
</CustomField>