Training/force-app/main/default/objects/Shop__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <description>ShopForMD</description>
    <label>Shop</label>
    <length>20</length>
    <type>Text</type>
</CustomField>