Training/force-app/main/default/objects/Shop__c/fields/TESTTEST__c.field-meta.xml
<CustomField>
    <fullName>TESTTEST__c</fullName>
    <label>TESTTEST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>