Training/force-app/main/default/objects/Shop__c/recordTypes/Coprorations_Shops.recordType-meta.xml
<RecordType>
    <fullName>Coprorations_Shops</fullName>
    <active>true</active>
    <label>Coprorations &amp; Shops</label>
</RecordType>