Training/force-app/main/default/objects/Shop__c/recordTypes/Supermarket.recordType-meta.xml
<RecordType>
    <fullName>Supermarket</fullName>
    <active>true</active>
    <description>Supermarket</description>
    <label>Supermarket</label>
</RecordType>