Training/force-app/main/default/objects/Shop__c/recordTypes/Web_shop.recordType-meta.xml
<RecordType>
    <fullName>Web_shop</fullName>
    <active>true</active>
    <description>Shop info</description>
    <label>Web shop</label>
</RecordType>