Training/force-app/main/default/objects/Shop__c/validationRules/Correct_Annual_Revenue.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_Annual_Revenue</fullName>
    <active>true</active>
    <errorConditionFormula>Annual_Revenue__c &gt; 0</errorConditionFormula>
    <errorDisplayField>Annual_Revenue__c</errorDisplayField>
    <errorMessage>Annual Revenue can not be = 0</errorMessage>
</ValidationRule>