Training/force-app/main/default/objects/Shop__c/validationRules/DirectorFail.validationRule-meta.xml
<ValidationRule>
    <fullName>DirectorFail</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Director__c )</errorConditionFormula>
    <errorDisplayField>Director__c</errorDisplayField>
    <errorMessage>U cant use null field</errorMessage>
</ValidationRule>