Training/force-app/main/default/objects/Shop__c/listViews/Rich_web_shop.listView-meta.xml
<ListView>
    <fullName>Rich_web_shop</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Rich web shop</label>
</ListView>