Training/force-app/main/default/objects/Shop__c/listViews/Rich_Web_Shop_List.listView-meta.xml
<ListView>
    <fullName>Rich_Web_Shop_List</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Rich Web Shop List</label>
</ListView>