Training/force-app/main/default/objects/Shop__c/listViews/Shops.listView-meta.xml
<ListView>
    <fullName>Shops</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Shops</label>
</ListView>